--- a/OutworldzFiles/Help/Startup.htm
+++ b/OutworldzFiles/Help/Startup.htm
@@ -33,6 +33,22 @@
 	line-height:115%;
 	font-size:10.0pt;
 	font-family:"Calibri",sans-serif;}
+h1
+	{mso-style-link:"Heading 1 Char";
+	margin-top:5.0pt;
+	margin-right:0in;
+	margin-bottom:0in;
+	margin-left:0in;
+	line-height:115%;
+	background:#5B9BD5;
+	border:none;
+	padding:0in;
+	font-size:11.0pt;
+	font-family:"Calibri",sans-serif;
+	color:white;
+	text-transform:uppercase;
+	letter-spacing:.75pt;
+	font-weight:normal;}
 h2
 	{mso-style-link:"Heading 2 Char";
 	margin-top:5.0pt;
@@ -48,28 +64,31 @@ h2
 	text-transform:uppercase;
 	letter-spacing:.75pt;
 	font-weight:normal;}
-p.MsoTitle, li.MsoTitle, div.MsoTitle
-	{mso-style-link:"Title Char";
+pre
+	{mso-style-link:"HTML Preformatted Char";
 	margin:0in;
-	line-height:115%;
-	font-size:26.0pt;
-	font-family:"Calibri Light",sans-serif;
-	color:#5B9BD5;
+	margin-bottom:.0001pt;
+	font-size:10.0pt;
+	font-family:"Courier New";}
+span.Heading1Char
+	{mso-style-name:"Heading 1 Char";
+	mso-style-link:"Heading 1";
+	font-family:"Times New Roman",serif;
+	color:white;
 	text-transform:uppercase;
-	letter-spacing:.5pt;}
+	letter-spacing:.75pt;
+	background:#5B9BD5;}
 span.Heading2Char
 	{mso-style-name:"Heading 2 Char";
 	mso-style-link:"Heading 2";
+	font-family:"Times New Roman",serif;
 	text-transform:uppercase;
 	letter-spacing:.75pt;
 	background:#DEEAF6;}
-span.TitleChar
-	{mso-style-name:"Title Char";
-	mso-style-link:Title;
-	font-family:"Calibri Light",sans-serif;
-	color:#5B9BD5;
-	text-transform:uppercase;
-	letter-spacing:.5pt;}
+span.HTMLPreformattedChar
+	{mso-style-name:"HTML Preformatted Char";
+	mso-style-link:"HTML Preformatted";
+	font-family:"Courier New";}
 .MsoChpDefault
 	{font-family:"Calibri",sans-serif;}
 .MsoPapDefault
@@ -93,180 +112,202 @@ div.WordSection1
 
 <div class=WordSection1>
 
-<p class=MsoTitle align=center style='margin-left:.5in;text-align:center'><span
-lang=EN>Startup - Starting up the System the First Time</span></p>
+<p class=MsoNormal>&nbsp;</p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><a name="_Hlk55150752"><span style='color:black'>After
-you click Start.exe, you may get a popup warning. All my binary code is
-digitally signed and is cryptographically verified to protect you and to assure
-you that the code you get is what is originally authored.  It is virus-free and
-has no ads. It should say &quot;Verified Publisher: Outworldz, LLC”.  </span></a></p>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black'>Click [Start] in the top left
-of the menu:</span></p>
+<h1><a name="_Toc58323640">Startup - Starting up the System the First Time</a></h1>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><img width=351 height=207 id="Picture 1"
+</div>
+
+<p class=MsoNormal>You can install DreamGrid by  saving ”InstallDreamGrid.exe”
+in an empty folder and running it. Or you can install DreamGrid by unzipping
+the zip file into a new, blank folder</p>
+
+<p class=MsoNormal>Then locate and click “Start.exe”.  You may get a popup
+warning. All my binary code is digitally signed and is cryptographically
+verified to protect you and to assure you that the code you get is what is
+originally authored.  It is virus-free and has no ads. It should say
+&quot;Verified Publisher: Outworldz, LLC”.  </p>
+
+<p class=MsoNormal>Click [Start] in the top left of the menu:</p>
+
+<p class=MsoNormal><img width=351 height=207 id="Picture 2146235408"
 src="Startup_files/image001.png"></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'>This box will appear for you to claim ownership of
-thje Grid.  </p>
+<p class=MsoNormal>This box will appear for you to claim ownership of the
+Grid.  </p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><img width=367 height=260
-src="Startup_files/image002.png"></p>
+<p class=MsoNormal><img width=238 height=168 id="Picture 2146235406"
+src="Startup_files/image002.jpg"><br>
+<br>
+Use a unique, new long password as this is the avatar that owns the grid.</p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'>Use a unique, new long password as this is the avatar
-that owns the grid.</p>
+<p class=MsoNormal>Another DOS box will appear. This will be your first region.
+The region will become &quot;Welcome&quot;.&nbsp;&nbsp;You can change this name
+later.  The system will ask you for an estate name.&nbsp; You can just press
+enter to name it “My Estate”, or type in a new name. </p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black'>Another DOS box will appear.
-This will be your first region. It will be named
-&quot;Welcome&quot;.&nbsp;&nbsp;You can change this name later.  The system
-will ask you for an estate name.  You can just press enter to name it “My
-Estate”, or type in a new name. </span></p>
+<p class=MsoNormal><img width=572 height=299 id="Picture 2146235392"
+src="Startup_files/image003.jpg" alt=Image></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span lang=EN><img width=572 height=299
-src="Startup_files/image003.jpg" alt=Image></span></p>
+<p class=MsoNormal>It will then ask you for the owner’s name of this
+region.&nbsp;&nbsp; Use the same name that you first entered.</p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black'>It will then ask you for the
-owner’s name of this region.&nbsp;&nbsp; Use the same name that you first entered
-in Robust.</span></p>
+<p class=MsoNormal><img width=582 height=304 id="Picture 20"
+src="Startup_files/image004.jpg" alt=Image></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span lang=EN><img width=582 height=304
-src="Startup_files/image004.jpg" alt=Image></span></p>
+<p class=MsoNormal>&nbsp;</p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black'>The system will
-eventually&nbsp;tell you &quot;INITIALIZATION COMPLETE FOR Welcome - LOGINS
-ENABLED&quot;</span></p>
+<p class=MsoNormal>The system will eventually&nbsp;tell you
+&quot;INITIALIZATION COMPLETE FOR Welcome - LOGINS ENABLED&quot;</p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span lang=EN><img width=592 height=309
-src="Startup_files/image005.jpg" alt=Image></span></p>
+<span style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif'><br
+clear=all style='page-break-before:always'>
+</span>
 
-<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
-margin-left:.5in;margin-right:0in'>
+<p class=MsoNormal>&nbsp;</p>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>Setup Your Viewer:</span></h2>
+<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
+
+<h2><a name="_Toc58323641"><span style='color:black'>Setup Your Viewer:</span></a></h2>
 
 </div>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><a name="_Hlk29305225"><span style='color:black'>Click
-the first item in the Help menu - Show Hypergrid address.  It may print a name,
-or an IP address.</span></a></p>
+<p class=MsoNormal>Click the first item in the Help menu - Show Hypergrid
+address.  It may print a name, or an IP address.</p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black'>If it is an IP Address, your
-system will only run on your local area network at this time. The Hypergrid
-will not be available until you set up the router.  See the help section at the
-bottom of this article on Ports and Loopback.</span></p>
+<p class=MsoNormal>If it is an IP Address, your system will only run on your
+local area network at this time. The Hypergrid will not be available until you
+set up the router.  See the help section at the bottom of this article on Ports
+and Loopback.</p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span lang=EN><img width=459 height=499
-src="Startup_files/image006.png" alt=Image></span></p>
+<p class=MsoNormal><img width=624 height=253 id="Picture 19"
+src="Startup_files/image005.png"></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black'>The system will print the
-address. Mine is shown below. Yours will be a different IP, or a DNS name.</span></p>
+<p class=MsoNormal>&nbsp;</p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><img width=422 height=196 id=rectole0000000009
-src="Startup_files/image007.jpg"></p>
+<p class=MsoNormal>The system will print the address. </p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black'>Download the Firestorm
-viewer for Opensim. You can get it from&nbsp;</span><a
-href="https://www.firestormviewer.org/"><span style='color:windowtext;
+<p class=MsoNormal>Download the Firestorm viewer for Opensim. You can get it
+from&nbsp;<a href="https://www.firestormviewer.org/"><span style='color:windowtext;
 text-decoration:none'>https://www.firestormviewer.org/</span></a></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black'>Launch the viewer and go to
-the Viewer Preferences menu (Ctrl-P).</span></p>
+<p class=MsoNormal>Launch the viewer and go to the Viewer Preferences menu
+(Ctrl-P).</p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span lang=EN><img border=0 width=165 height=108
-src="Startup_files/image008.png" alt=Image></span></p>
+<p class=MsoNormal><img border=0 width=165 height=108 id="Picture 18"
+src="Startup_files/image006.png" alt=Image></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black'>Go to the Opensim Grid
-manager screen:</span></p>
+<span style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif'><br
+clear=all style='page-break-before:always'>
+</span>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span lang=EN><img border=0 width=499 height=375
-src="Startup_files/image009.jpg" alt=Image></span></p>
+<p class=MsoNormal>&nbsp;</p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black'>Add the new name to the
-Firestorm or other viewers &quot;Add new Grid&quot; field and click
-&quot;Apply&quot;.</span></p>
+<p class=MsoNormal>Go to the Opensim Grid manager screen:</p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black'>You should now be able to
-select your new DreamGrid in the pulldown login screen, and log in with the
-same First and Last Name and password you originally entered. You should then
-appear in an empty sim on a small round island.</span></p>
+<p class=MsoNormal><img border=0 width=499 height=375 id="Picture 2"
+src="Startup_files/image007.jpg" alt=Image></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black'>If this does not work,
-please use the troubleshooting link at the bottom of this help file.</span></p>
+<p class=MsoNormal>Add the IP address to the Firestorm or other viewers
+&quot;Add new Grid&quot; field and click &quot;Apply&quot;.</p>
 
-<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
-margin-left:.5in;margin-right:0in'>
+<p class=MsoNormal>You should now be able to select your new DreamGrid in the
+pulldown login screen  and log in with the same First and Last Name and
+password you originally entered. You should then appear in an empty sim on a
+small round island.</p>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>Running the Grid
-manually </span></h2>
+<p class=MsoNormal>If this does not work, please use the troubleshooting link
+at the bottom of this help file.</p>
+
+<span style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif'><br
+clear=all style='page-break-before:always'>
+</span>
+
+<p class=MsoNormal>&nbsp;</p>
+
+<p class=MsoNormal>&nbsp;</p>
+
+<div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6'>
+
+<h2><a name="_Toc58323642"><span style='color:black'>Running the Grid manually</span></a><span
+style='color:black'> </span></h2>
 
 </div>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black'><br>
-<span style='background:white'>After the first run, you technically do not need
-DreamGrid at all.  The batch file <b>Go.bat</b> starts a command prompt with an
-instance of Opensim in it (an instance is a set of sims). The batch file
-launches Opensim with the settings it needs for the INI files and the Log file.</span><br>
-See Outworldzfiles\mysql\bin\StartManually.bat  which will start MySQL.  Also a
-StopMysql.bat in there.  It is a clever idea to run (as an Administrator)
-InstallAsAService.bat so you do not need to start/stop MySQL.</span></p>
+<p class=MsoNormal><span style='background:white'><br>
+After the first run, you do not need DreamGrid at all.  The batch file <b>Go.bat</b>
+starts a command prompt with an instance of Opensim in it (an instance is a set
+of sims). The batch file launches Opensim with the settings it needs for the
+INI files and the Log file.</span><br>
+See Outworldzfiles\mysql\bin\StartManually.bat  which will start MySQL.  Also,
+a StopMysql.bat is in there.  It is a clever idea to run (as an Administrator)
+InstallAsAService.bat so you do not need to start/stop MySQL.</p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black'>See
-Outworldzfiles\Opensim\RunRobust.bat which starts Robust</span></p>
+<div style='border:solid #888888 1.0pt;padding:2.0pt 2.0pt 2.0pt 2.0pt;
+margin-left:.25in;margin-right:0in'><pre style='border:none;padding:0in'><span
+style='color:#660066'>InstallAsAService</span><span style='color:#666600'>.</span><span
+style='color:black'>bat</span></pre></div>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black'>See
-Outworldzfiles\Opensim\go,.bat Starts any region by Instance (Dos Box ) Name.</span></p>
+<p class=MsoNormal><span style='color:black'>&nbsp;</span>See
+Outworldzfiles\Opensim\RunRobust.bat which starts Robust</p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black;background:white'>This is the
-batch file &quot;StartManually.bat&quot; which does them in sequence:</span></p>
+<div style='border:solid #888888 1.0pt;padding:2.0pt 2.0pt 2.0pt 2.0pt;
+margin-left:.25in;margin-right:0in'><pre style='border:none;padding:0in'><span
+style='color:#660066'>RunRobust</span><span style='color:#666600'>.</span><span
+style='color:black'>bat&nbsp;</span></pre></div>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
-10.0pt;margin-left:.5in'><span style='color:black'><br>
-</span><span style='font-family:"Courier New";color:black;background:white'>@remarkable
-batch file to start DreamGrid manually.</span><span style='font-family:"Courier New";
-color:black'><br>
-<span style='background:white'>cd mysql\bin</span><br>
-<span style='background:white'>start startmanually.bat</span><br>
-<span style='background:white'>cd ..\..\opensim</span><br>
-<span style='background:white'>call runrobust.bat</span><br>
-<span style='background:white'>call go Welcome</span><br>
-<span style='background:white'>call go AnotherRegion</span></span></p>
+<p class=MsoNormal style='margin-left:.5in'><span style='color:black'>&nbsp;</span>See
+Outworldzfiles\Opensim\go.bat, which starts any region by Instance (Dos Box)
+Name.  <span style='background:white'>This is the batch file
+&quot;StartManually.bat&quot; which does them in sequence:</span></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:31.5pt;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Courier New";color:black;
-background:white'>add more region names here</span> </p>
+<div style='border:solid #888888 1.0pt;padding:2.0pt 2.0pt 2.0pt 2.0pt;
+margin-left:.25in;margin-right:0in'><pre style='border:none;padding:0in'><span
+style='color:#006666'>@remarkable</span><span style='color:black'> batch file to start </span><span
+style='color:#660066'>DreamGrid</span><span style='color:black'> manually</span><span
+style='color:#666600'>.<br>
+</span><span style='color:black'>cd mysql\b</span><span style='color:#000088'>in</span><span
+style='color:#666600'> <br>
+</span><span style='color:black'>start startmanually</span><span
+style='color:#666600'>.</span><span style='color:black'>bat</span><span
+style='color:#666600'> <br>
+</span><span style='color:black'>cd opensim</span><span style='color:#666600'> <br>
+</span><span style='color:black'>call runrobust</span><span style='color:#666600'>.</span><span
+style='color:black'>bat</span><span style='color:#666600'> <br>
+</span><span style='color:black'>call go </span><span style='color:#660066'>Welcome</span><span
+style='color:#666600'> <br>
+</span><span style='color:black'>call go </span><span style='color:#660066'>AnotherRegion<br>
+</span><span style='color:#000088'>add</span><span style='color:black'> more region names here</span></pre></div>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span lang=EN>&nbsp;</span></p>
+<p class=MsoNormal>&nbsp;</p>
+
+<span style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif'><br
+clear=all style='page-break-before:always'>
+</span>
+
+<p class=MsoNormal style='text-align:justify;text-justify:inter-ideograph'>&nbsp;</p>
+
+<p class=MsoNormal>&nbsp;</p>
+
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
+
+<h1><a name="_Toc58323643">Settings</a></h1>
+
+</div>
+
+<p class=MsoNormal>You can make changes to DreamGrid in the Ctrl-S (Settings)
+menu.<br>
+<br>
+<img border=0 width=470 height=304 id="Picture 17"
+src="Startup_files/image008.png"></p>
+
+<p class=MsoNormal><img border=0 width=278 height=333 id="Picture 2146235410"
+src="Startup_files/image009.jpg"> </p>
+
+<p class=MsoNormal>Each section of this manual is in Alphabetical order
+according to the above menu.</p>
 
 </div>
 
