--- a/OutworldzFiles/Help/Backup.htm
+++ b/OutworldzFiles/Help/Backup.htm
@@ -19,20 +19,26 @@
 	{font-family:"Cambria Math";
 	panose-1:2 4 5 3 5 4 6 3 2 4;}
 @font-face
+	{font-family:Calibri;
+	panose-1:2 15 5 2 2 2 4 3 2 4;}
+@font-face
 	{font-family:"Calibri Light";
 	panose-1:2 15 3 2 2 2 4 3 2 4;}
 @font-face
 	{font-family:Verdana;
 	panose-1:2 11 6 4 3 5 4 4 2 4;}
 @font-face
-	{font-family:"Beyond Wonderland";
-	panose-1:2 0 0 0 0 0 0 0 0 0;}
+	{font-family:"Segoe UI";
+	panose-1:2 11 5 2 4 2 4 2 2 3;}
+@font-face
+	{font-family:"\@SimSun";
+	panose-1:2 1 6 0 3 1 1 1 1 1;}
 @font-face
 	{font-family:"\@MS Mincho";
 	panose-1:2 2 6 9 4 2 5 8 3 4;}
 @font-face
-	{font-family:"\@SimSun";
-	panose-1:2 1 6 0 3 1 1 1 1 1;}
+	{font-family:"Beyond Wonderland";
+	panose-1:0 0 0 0 0 0 0 0 0 0;}
  /* Style Definitions */
  p.MsoNormal, li.MsoNormal, div.MsoNormal
 	{margin-top:5.0pt;
@@ -42,26 +48,33 @@
 	line-height:115%;
 	font-size:10.0pt;
 	font-family:"Calibri",sans-serif;}
-p.MsoTitle, li.MsoTitle, div.MsoTitle
-	{mso-style-link:"Title Char";
-	margin:0in;
+h1
+	{mso-style-link:"Heading 1 Char";
+	margin-top:5.0pt;
+	margin-right:0in;
+	margin-bottom:0in;
+	margin-left:0in;
 	line-height:115%;
-	font-size:26.0pt;
-	font-family:"Calibri Light",sans-serif;
-	color:#5B9BD5;
+	background:#5B9BD5;
+	border:none;
+	padding:0in;
+	font-size:11.0pt;
+	font-family:"Calibri",sans-serif;
+	color:white;
 	text-transform:uppercase;
-	letter-spacing:.5pt;}
+	letter-spacing:.75pt;
+	font-weight:normal;}
 a:link, span.MsoHyperlink
 	{font-family:"Times New Roman",serif;
 	color:blue;
 	text-decoration:underline;}
-span.TitleChar
-	{mso-style-name:"Title Char";
-	mso-style-link:Title;
-	font-family:"Calibri Light",sans-serif;
-	color:#5B9BD5;
+span.Heading1Char
+	{mso-style-name:"Heading 1 Char";
+	mso-style-link:"Heading 1";
+	color:white;
 	text-transform:uppercase;
-	letter-spacing:.5pt;}
+	letter-spacing:.75pt;
+	background:#5B9BD5;}
 .MsoChpDefault
 	{font-family:"Calibri",sans-serif;}
 .MsoPapDefault
@@ -84,26 +97,31 @@ div.WordSection1
 
 <div class=WordSection1>
 
-<p class=MsoTitle>Backup - Autobackup </p>
+<div style='border:solid #5B9BD5 3.0pt;padding:0in 0in 0in 0in;background:#5B9BD5'>
+
+<h1>Backup - Autobackup </h1>
+
+</div>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif'>if
-enabled, the Autobackup module periodically saves all regions as OAR files.   </span></p>
+enabled, the Autobackup module periodically saves data to a folder.    </span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif'><img
-width=252 height=250 src="Backup_files/image001.png"></span></p>
+width=252 height=250 id="Picture 2146235493" src="Backup_files/image001.png"></span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif'>If this
-is enabled, Opensim will make an OAR backup of each region after Opensim has
-run for <b>Interval</b> time.   The files will appear in the
+10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif'>If Auto
+Backup is enabled, Opensim will make an OAR backup of each region after Opensim
+has run for <b>Interval</b> time.  If there are checkboxes set in the System
+Backup, then those files will be backup up, too. The files will appear in the
 Outworldzfiles\Autobackup folder.  </span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><b><span style='font-family:"Verdana",sans-serif'>Keep
 for Days</span></b><span style='font-family:"Verdana",sans-serif'> will delete
-any OAR older than this period of time.   </span></p>
+any OAR or  backup zip older than this period of time.   </span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><b><span style='font-family:"Verdana",sans-serif'>Save
@@ -116,7 +134,7 @@ location.</span></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><b><span style='font-family:"Verdana",sans-serif'><img
-width=255 height=107 src="Backup_files/image002.png"></span></b></p>
+width=255 height=107 id="Picture 2146235483" src="Backup_files/image002.png"></span></b></p>
 
 <p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
 10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif'>You can
@@ -131,11 +149,13 @@ menu.</span></p>
 href="http://opensimulator.org/wiki/Load_Oar_0.9.0%2B"><span style='color:black'><span
 style='color:black'>http://opensimulator.org/wiki/Load_Oar_0.9.0%2B</span></span></a></span></p>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif'>&nbsp;</span></p>
+<span style='font-size:10.0pt;line-height:115%;font-family:"Calibri",sans-serif'><br
+clear=all style='page-break-before:always'>
+</span>
 
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Verdana",sans-serif'>&nbsp;</span></p>
+<p class=MsoNormal>&nbsp;</p>
+
+<p class=MsoNormal>&nbsp;</p>
 
 </div>
 
