Region Crashcounter added Map Help

--- a/OutworldzFiles/Help/Maps.htm
+++ b/OutworldzFiles/Help/Maps.htm
@@ -63,6 +63,11 @@ p.MsoTitle, li.MsoTitle, div.MsoTitle
 	color:#5B9BD5;
 	text-transform:uppercase;
 	letter-spacing:.5pt;}
+p
+	{margin-right:0in;
+	margin-left:0in;
+	font-size:12.0pt;
+	font-family:"Times New Roman",serif;}
 span.Heading2Char
 	{mso-style-name:"Heading 2 Char";
 	mso-style-link:"Heading 2";
@@ -204,7 +209,7 @@ color:black'><br>
 <div style='border:solid #DEEAF6 3.0pt;padding:0in 0in 0in 0in;background:#DEEAF6;
 margin-left:.5in;margin-right:0in'>
 
-<h2 style='background:#DEEAF6'><span style='color:black'>Manual regeneration</span></h2>
+<h2><span style='color:black'>Manual regeneration</span></h2>
 
 </div>
 
@@ -215,16 +220,122 @@ manually force map tile regeneration with the console command '</span><span
 style='font-family:"Arial Unicode MS",sans-serif;color:black'>generate
 map&lt;enter&gt;'.</span></p>
 
+<p style='margin-left:.5in'>Stop the system, but do not exit. The first step after
+it has stopped is to go to Setup-&gt;Settings-&gt;Regions, where the Global
+Maps are set for all regions. </p>
+
+<p><img border=0 width=236 height=296 src="Maps_files/image003.png"></p>
+
+<p style='margin-left:.5in'>&nbsp;</p>
+
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
-6.0pt;margin-left:.5in;background:white'><span style='font-family:"Arial Unicode MS",sans-serif;
+6.0pt;margin-left:.5in;background:white'><span style='color:black'>There is a
+&quot;deregister all regions&quot; button.&nbsp; </span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>If you typed 'q' or 'quit' or pressed stop, they are deregistered
+from the system.&nbsp; Sometimes a region crashes and remains behind which can
+confuse some software systems. Maps need to be cleared and rebuilt&nbsp; when
+you delete a region or move them around.</span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>Example 1:&nbsp; You get an error when you load a new region with
+the same name, or try to use the same map location.&nbsp; </span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>Example 2: you moved a region, and it appears twice on the maps.</span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>Example 3: you deleted a region, and it still appears on the map.</span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>Simplest way to fix this begins with stopping the system with the
+stop button.&nbsp; You need to do this first as we are going to clear out all
+regions, and let the system build it when it boots.</span></p>
+
+<p>&nbsp;</p>
+
+<p style='margin-left:.5in'><span style='font-size:10.0pt;font-family:"Arial Unicode MS",sans-serif;
+color:black'><img border=0 width=396 height=496 src="Maps_files/image004.png"></span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>Click the button.&nbsp; This removes all regions from the
+database.&nbsp; Regions will re-register when the region&nbsp; starts.&nbsp; </span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>Step 2 is to remake the maps.&nbsp; </span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>A) Go to Setup Settings-&gt;Maps and erase them all with
+&quot;Delete All Maps&quot;</span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'><img border=0 width=420 height=393 src="Maps_files/image005.png"></span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>B) Now choose &quot;Best (prims + Mesh Very Slow)&quot;</span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>C) Close this window which saves the new Global setting.</span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>D) Press Start. </span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>E) Once all the regions have booted to the DOS boxes,&nbsp;set map
+back to &quot;None&quot;.&nbsp; They can still be making maps. They just need
+to all be starting up and then you can change the Global Settings.&nbsp; </span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>The next time you boot, the regions will load very quickly as the
+maps will not be remade. Maps only need to be cleared when you delete a region
+or move them around.</span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>F) Each region has an override setting.&nbsp;&nbsp; If set, the
+override will choose a different setting for maps. </span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>Example: I leave the global maps off all the time.&nbsp;&nbsp; But
+I may be working heavily on a region and changing it around, and want that to
+appear after every reboot.&nbsp; I go to the Regions List and click the Region
+and set the override to the desired setting, and reboot the region.</span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>Select Edit:</span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'><img border=0 width=200 height=353 src="Maps_files/image006.png"></span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
+color:black'>Then choose a Map setting and save the Region.</span></p>
+
+<p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
 color:black'>&nbsp;</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:.5in;margin-bottom:
-6.0pt;margin-left:.5in;background:white'><span style='font-family:"Arial Unicode MS",sans-serif;
+6.0pt;margin-left:.5in;background:white'><span style='font-family:"Verdana",sans-serif;
 color:black'>&nbsp;</span></p>
-
-<p class=MsoNormal style='margin-top:5.0pt;margin-right:.5in;margin-bottom:
-10.0pt;margin-left:.5in'><span style='font-family:"Times New Roman",serif'>&nbsp;</span></p>
 
 </div>
 
